--- a/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
+++ b/Foodies/Foodies/Base.lproj/Main_iPhone.storyboard
@@ -48,7 +48,7 @@
             </objects>
             <point key="canvasLocation" x="653" y="1935"/>
         </scene>
-        <!--Camera View Controller - Some title-->
+        <!--Camera View Controller-->
         <scene sceneID="bip-ul-DJt">
             <objects>
                 <viewController id="au5-ON-E1O" customClass="CameraViewController" sceneMemberID="viewController">
@@ -71,17 +71,17 @@
                                                 <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
+                                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="zJ0-zx-SLS">
+                                                <rect key="frame" x="0.0" y="-64" width="320" height="424"/>
+                                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                            </imageView>
                                         </subviews>
                                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                                     </view>
-                                    <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" id="zJ0-zx-SLS">
-                                        <rect key="frame" x="0.0" y="64" width="320" height="320"/>
-                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                    </imageView>
-                                    <view contentMode="scaleToFill" id="qOu-WT-l6B">
+                                    <view alpha="0.80000000000000004" contentMode="scaleToFill" id="qOu-WT-l6B">
                                         <rect key="frame" x="0.0" y="384" width="320" height="40"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                        <color key="backgroundColor" cocoaTouchSystemColor="scrollViewTexturedBackgroundColor"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                     </view>
                                     <collectionView opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" minimumZoomScale="0.0" maximumZoomScale="0.0" dataMode="prototypes" id="Eks-qO-ql4">
                                         <rect key="frame" x="0.0" y="423" width="320" height="145"/>
@@ -119,7 +119,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
-                    <navigationItem key="navigationItem" title="Some title" id="BY8-5G-u6c">
+                    <navigationItem key="navigationItem" id="BY8-5G-u6c">
                         <barButtonItem key="rightBarButtonItem" title="Next" id="JOx-9A-oxm">
                             <connections>
                                 <action selector="nextTapped:" destination="au5-ON-E1O" id="2fc-ay-NLe"/>
@@ -235,7 +235,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Vu9-dA-1bX" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Camera" image="integrated_webcam-32.png" id="cTV-QM-q6B"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="obM-fO-MiJ">
+                    <navigationBar key="navigationBar" opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" id="obM-fO-MiJ">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
@@ -251,7 +251,7 @@
         <!--Navigation Controller-->
         <scene sceneID="aA1-Gm-T5h">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="adG-Lt-IYJ" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="cameraTest" automaticallyAdjustsScrollViewInsets="NO" id="adG-Lt-IYJ" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="JQf-WO-zL2">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
